--- a/task/package.json
+++ b/task/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start:es6": "nodemon --exec babel-node ./src/index.js"
+        "start": "nodemon --exec babel-node ./src/index.js"
     },
     "keywords": [],
     "author": "",
