--- a/task/package.json
+++ b/task/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon --exec babel-node ./src/index.js"
+        "start": "nodemon --exec babel-node ./src/index.js",
+        "webpack:debug": "npx node --inspect-brk ./node_modules/webpack/bin/webpack.js --inline --progress"
     },
     "keywords": [],
     "author": "",
