--- a/task/package.json
+++ b/task/package.json
@@ -15,6 +15,7 @@
         "koa": "^2.11.0",
         "koa-body": "^4.1.2",
         "koa-combine-routers": "^4.0.2",
+        "koa-compose": "^4.1.0",
         "koa-helmet": "^5.2.0",
         "koa-json": "^2.0.2",
         "koa-router": "^8.0.8",
