--- a/task/package.json
+++ b/task/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon --exec babel-node ./src/index.js",
-        "webpack:debug": "npx node --inspect-brk ./node_modules/webpack/bin/webpack.js --inline --progress"
+        "webpack:debug": "npx node --inspect-brk ./node_modules/webpack/bin/webpack.js --inline --progress",
+        "build": "cross-env NODE_ENV=prod webpack --config config/webpack.config.prod.js",
+        "dev": "cross-env NODE_ENV=dev nodemon --exec babel-node --inspect ./src/index.js",
+        "clean": "rimraf dist"
     },
     "keywords": [],
     "author": "",
@@ -16,6 +19,7 @@
         "koa-body": "^4.1.2",
         "koa-combine-routers": "^4.0.2",
         "koa-compose": "^4.1.0",
+        "koa-compress": "^4.0.1",
         "koa-helmet": "^5.2.0",
         "koa-json": "^2.0.2",
         "koa-router": "^8.0.8",
@@ -29,8 +33,11 @@
         "clean-webpack-plugin": "^3.0.0",
         "cross-env": "^7.0.2",
         "nodemon": "^2.0.4",
+        "rimraf": "^3.0.2",
+        "terser-webpack-plugin": "^3.0.1",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
+        "webpack-merge": "^4.2.2",
         "webpack-node-externals": "^1.7.2"
     }
 }
